# itschool_tt

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
itschooltt/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
lessons/: forms.py  models.py  tasks.py  urls.py  views.py
lessons/management/commands/: create_test_data.py  populate_data.py  update_lesson_statuses.py
lessons/migrations/: 0001_initial.py  0002_lesson_duration.py  0003_alter_lesson_scheduled_at.py
static_src/css/: styles.css
templates/lessons/: lesson_form.html  lesson_list.html
templates/lessons/partials/: indicator_balls.html  indicator_bars.html  lesson_row.html  task_status.html
